31.07.2023
    - Fixed midi remote control: Don't accept note-offs. (Tim)
      Symptoms were: Double step-record entries, transport record toggling, double play etc.
26.07.2023
    - Fixed broken midi to logarithmic audio controller assignment, such as volume. (Tim)
06.07.2023
    - Hexfloat values: Rework code with help from donarturo11. (Tim)
      Avoid per-thread thread-safe locale calls (uselocale etc). Not available on mingw for ex.
17.06.2023
    - Fixed: LV2 Synths like Odin-II not responding to automation since around 29.04.2023. (Tim)
15.06.2023
    - Fixed issue 1121: Undefined symbol ipatch_close. (Tim)
      ipatch_close was introduced in libinstpatch 1.1.0
    - Changed: Midi export: Turn off 'export zero velocity note-offs' setting by default.
13.06.2023
    - Fixed: File menu > close hanging. Further to 13.05.2023 (Tim)
      Check if immediate deletions took place. Also, in track info panel, NULL the strip widgets
       BEFORE deleting them, instead of deleting then nulling.
12.06.2023
    - Oops. Fixed mistake at 15.05.2023: Link libinstpatch with 'muse' module, not 'core'. (Tim)
11.06.2023
    - Fixed issue 1120 "Cannot clone parts". (Tim)
      Several pieces of code were fixed, including one 10-year-old mistake.
      Tested OK copy/paste/clone with several different tracks types.
29.05.2023
    - Fixed: Still more crashes / bad behaviour on song (re)load. Further to 25.05.2023. (Tim)
      Fix at 13.05.2023 (wait for top level widgets to be deleted before continuing with load) was good
       but needed to include more than just the top levels. Child widget destructors are called AFTER
       the parent. So there was no choice - add SOME of those widgets to the list of pending deletes.
      Specifically, widgets connected to external signals heartBeat timer, songChanged, configChanged.
    - Fixed: Another crash in Master Editor: Removed members 'hscroll' and 'vscroll' which were hiding